Remove comma in server name

--- a/setup/nginx/configs/wlosiara.pl.conf
+++ b/setup/nginx/configs/wlosiara.pl.conf
@@ -10,7 +10,7 @@ upstream wlosiara-cluster {
 
 
 server {
-	server_name wlosiara.pl, api.wlosiara.pl;
+	server_name wlosiara.pl api.wlosiara.pl;
 	listen 443 ssl;
 	location / {
 		proxy_pass http://wlosiara-cluster;
