Multiple server sections

--- a/setup/nginx/configs/wlosiara.pl.conf
+++ b/setup/nginx/configs/wlosiara.pl.conf
@@ -10,7 +10,20 @@ upstream wlosiara-cluster {
 
 
 server {
-	server_name wlosiara.pl api.wlosiara.pl;
+	server_name api.wlosiara.pl;
+	listen 443 ssl;
+	location / {
+		proxy_pass http://wlosiara-cluster;
+
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+	}
+
+}
+
+
+server {
+	server_name wlosiara.pl;
 	listen 443 ssl;
 	location / {
 		proxy_pass http://wlosiara-cluster;
