--- a/setup/nginx/configs/wlosiara.pl.conf
+++ b/setup/nginx/configs/wlosiara.pl.conf
@@ -10,7 +10,7 @@ upstream wlosiara-cluster {
 
 
 server {
-	server_name api.wlosiara.pl;
+	server_name wlosiara.pl api.wlosiara.pl;
 	listen 443 ssl;
 	location / {
 		proxy_pass http://wlosiara-cluster;
@@ -19,17 +19,6 @@ server {
 		proxy_set_header X-Real-IP $remote_addr;
 	}
 
-}
-
-
-server {
-	server_name wlosiara.pl;
-	listen 443 ssl;
-	location / {
-		proxy_pass http://wlosiara-cluster;
-
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-	}
-
+    ssl_certificate /etc/letsencrypt/live/wlosiara.pl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/wlosiara.pl/privkey.pem; # managed by Certbot
 }
