Persistent volume claims for products database

--- a/setup/kubernetes/microservices/products-database/statefulset.yaml
+++ b/setup/kubernetes/microservices/products-database/statefulset.yaml
@@ -29,6 +29,18 @@ spec:
         - name: products-database-data
           mountPath: /var/lib/postgresql/data
       volumes:
-      - name: postgres-data
+      - name: products-database-data
         persistentVolumeClaim:
-          claimName: postgres-data
+          claimName: products-database-data
+  volumeClaimTemplates:
+  - metadata:
+      name: products-database-data
+      labels:
+        microservice: products-database
+    spec:
+      storageClassName: standard
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 1Gi
