Fix postgres password in products-service

--- a/setup/kubernetes/microservices/products-service/secret.yaml
+++ b/setup/kubernetes/microservices/products-service/secret.yaml
@@ -9,5 +9,5 @@ stringData:
   POSTGRES_HOST: "products-database"
   POSTGRES_PORT: "5432"
   POSTGRES_USERNAME: "postgres"
-  POSTGRES_PASSWORD: "postgres"
+  POSTGRES_PASSWORD: "cG9zdGdyZXM="
   POSTGRES_DATABASE: "postgres"
