Fix postgres database name

--- a/setup/kubernetes/microservices/products-service/secret.yaml
+++ b/setup/kubernetes/microservices/products-service/secret.yaml
@@ -10,4 +10,4 @@ stringData:
   POSTGRES_PORT: "5432"
   POSTGRES_USERNAME: "postgres"
   POSTGRES_PASSWORD: "cG9zdGdyZXM="
-  POSTGRES_DATABASE: "postgres"
+  POSTGRES_DATABASE: "products_microservice"
