--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -21,7 +21,7 @@ spec:
     - host: api.wlosiara.pl
       http:
         paths:
-          - path: /(.+)/products(/|$)(.*)
+          - path: /(.+)/(.+)+(/|$)(.*)
             pathType: Prefix
             backend:
               service:
