--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"homepage": "https://github.com/projekt-zespolowy-ALR/wlosiara-infrastructure#readme",
 	"type": "module",
 	"devDependencies": {
+		"@j-ulrich/release-it-regex-bumper": "^4.1.1",
 		"release-it": "^15.9.3"
 	}
 }
