--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,6 +60,12 @@ jobs:
         run: tar -xzf ./${{github.event.repository.name}}-${{ needs.release.outputs.release_version }}.tar.gz
       - name: Remove tarball
         run: rm ./${{github.event.repository.name}}-${{ needs.release.outputs.release_version }}.tar.gz
+      - name: Enable dotglob
+        run: shopt -s dotglob
+      - name: Move release files to root
+        run: mv ./${{github.event.repository.name}}-${{ needs.release.outputs.release_version }}/* ./
+      - name: Disable dotglob
+        run: shopt -u dotglob
       - uses: goodsmileduck/helm-push-action@v2
         env:
           SOURCE_DIR: "."
