Use wildcard to find folder in publish_helm_chart_to_chartmuseum

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Move the files to the current directory
         run: |
           shopt -s dotglob
-          mv ./${{github.event.repository.owner.login}}-${{github.event.repository.name}}-$GITHUB_SHA/* ./
+          mv ./${{github.event.repository.owner.login}}-${{github.event.repository.name}}-*/* ./
           shopt -u dotglob
       - uses: goodsmileduck/helm-push-action@v2
         env:
