--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,15 +88,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy Helm chart to Kubernetes
-        uses: vimeda/helm@v1.6.8
-        with:
-          release: ${{ github.event.repository.name }}
-          namespace: default
-          chart-version: ${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }}
-          repo: ${{ secrets.CHARTMUSEUM_URL }}
-          repo-alias: wlosiara-pl-chartmuseum
-          chart: wlosiara-pl-chartmuseum/${{ github.event.repository.name }}
-          repo-username: ${{ secrets.CHARTMUSEUM_USERNAME }}
-          repo-password: ${{ secrets.CHARTMUSEUM_PASSWORD }}
-        env:
-          KUBECONFIG_FILE: ${{ secrets.KUBECONFIG }}
+        run: |
+          echo "${{ secrets.KUBECONFIG }}" > ./kubeconfig.yaml
+          helm repo add wlosiara-pl-chartmuseum ${{ secrets.CHARTMUSEUM_URL }}
+          helm upgrade --install ${{ github.event.repository.name }} wlosiara-pl-chartmuseum/${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --repo-username ${{ secrets.CHARTMUSEUM_USERNAME }} --repo-password ${{ secrets.CHARTMUSEUM_PASSWORD }} --kubeconfig ./kubeconfig.yaml
+          rm ./kubeconfig.yaml
