--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,5 +91,5 @@ jobs:
         run: |
           echo "${{ secrets.KUBECONFIG }}" > ./kubeconfig.yaml
           helm repo add wlosiara-pl-chartmuseum ${{ secrets.CHARTMUSEUM_URL }}
-          helm upgrade --install ${{ github.event.repository.name }} wlosiara-pl-chartmuseum/${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --repo-username ${{ secrets.CHARTMUSEUM_USERNAME }} --repo-password ${{ secrets.CHARTMUSEUM_PASSWORD }} --kubeconfig ./kubeconfig.yaml
+          helm upgrade --install ${{ github.event.repository.name }} wlosiara-pl-chartmuseum/${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --username ${{ secrets.CHARTMUSEUM_USERNAME }} --password ${{ secrets.CHARTMUSEUM_PASSWORD }} --kubeconfig ./kubeconfig.yaml
           rm ./kubeconfig.yaml
