Remove typo from release pipeline

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: Setup Helm
         uses: azure/setup-helm@v3
         with:
-          version: ${{ env.SETUP_HELM_HELM_VERSION }}`
+          version: ${{ env.SETUP_HELM_HELM_VERSION }}
       - name: Build Helm chart dependencies
         run: |
           helm dependency build helm/
