--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -71,9 +71,12 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: ${{ env.SETUP_HELM_HELM_VERSION }}
-      - name: Add ChartMuseum repository
+      - name: Add Włosiara.pl ChartMuseum repository
         run: |
           helm repo add wlosiara-pl-chartmuseum ${{ secrets.CHARTMUSEUM_URL }}
+      - name: Add ChartMuseum repository
+        run: |
+          helm repo add chartmuseum https://chartmuseum.github.io/charts
       - name: Build Helm chart dependencies
         run: |
           helm dependency build helm/
@@ -98,7 +101,7 @@ jobs:
         run: |
           mkdir -p ~/.kube
           echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-      - name: Add ChartMuseum repository
+      - name: Add Włosiara.pl ChartMuseum repository
         run: |
           helm repo add wlosiara-pl-chartmuseum ${{ secrets.CHARTMUSEUM_URL }}
       - name: Deploy Helm chart to Kubernetes
