--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,3 +1,6 @@
+Okay so fix the code:
+-----------------------------------------
+
 name: Release
 
 on:
@@ -104,6 +107,9 @@ jobs:
       - name: Add Włosiara.pl ChartMuseum repository
         run: |
           helm repo add wlosiara-pl-chartmuseum ${{ secrets.CHARTMUSEUM_URL }}
+      - name: Update Helm chart repositories
+        run: |
+          helm repo update
       - name: Deploy Helm chart to Kubernetes
         run: |
           helm upgrade --install ${{ github.event.repository.name }} wlosiara-pl-chartmuseum/${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --username ${{ secrets.CHARTMUSEUM_USERNAME }} --password ${{ secrets.CHARTMUSEUM_PASSWORD }}
