--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -38,3 +38,13 @@ spec:
                 name: "{{ .Release.Name }}-chartmuseum"
                 port:
                   number: 8080
+    - host: docker-registry.dev.wlosiara.pl
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: "{{ .Release.Name }}-docker-registry"
+                port:
+                  number: 5000
