Do not use npm scripts in helm_package job

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -89,7 +89,7 @@ jobs:
           helm dependency build helm/
       - name: Run Helm package
         run: |
-          npm run helm-package
+          helm package helm/
       - name: Upload Helm chart
         uses: actions/upload-artifact@v3
         with:
