Fix infinite redirect loop

--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   name: ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   tls:
