--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -139,4 +139,4 @@ jobs:
           chmod 600 ~/.kube/config
       - name: Deploy Helm chart to Kubernetes
         run: |
-          helm upgrade --install ${{ github.event.repository.name }} ${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --username=${{ secrets.CHARTMUSEUM_USERNAME }} --password=${{ secrets.CHARTMUSEUM_PASSWORD }} --set=docker-registry.secrets.htpasswd=${{ secrets.DOCKER_REGISTRY_HTPASSWD }}
+          helm upgrade --install ${{ github.event.repository.name }} ${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --username=${{ secrets.CHARTMUSEUM_USERNAME }} --password=${{ secrets.CHARTMUSEUM_PASSWORD }} --set=docker-registry.secrets.htpasswd='${{ secrets.DOCKER_REGISTRY_HTPASSWD }}'
