--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -137,6 +137,10 @@ jobs:
           mkdir -p ~/.kube
           echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
           chmod 600 ~/.kube/config
+      - name: Install apache2-utils
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apache2-utils
       - name: Deploy Helm chart to Kubernetes
         run: |
-          helm upgrade --install ${{ github.event.repository.name }} ${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --username=${{ secrets.CHARTMUSEUM_USERNAME }} --password=${{ secrets.CHARTMUSEUM_PASSWORD }} --set=docker-registry.secrets.htpasswd='${{ secrets.DOCKER_REGISTRY_HTPASSWD }}'
+          helm upgrade --install ${{ github.event.repository.name }} ${{ github.event.repository.name }} --version=${{ needs.publish_helm_chart_to_chartmuseum.outputs.chart_version }} --namespace=default --repo=${{ secrets.CHARTMUSEUM_URL }} --username=${{ secrets.CHARTMUSEUM_USERNAME }} --password=${{ secrets.CHARTMUSEUM_PASSWORD }} --set=docker-registry.secrets.htpasswd=$(htpasswd -nbB '${{ secrets.DOCKER_REGISTRY_USERNAME }}' '${{ secrets.DOCKER_REGISTRY_PASSWORD }}' | tr -d '\n')
