Revert "Change "create" to "apply" in create image pull secret step"

--- a/.github/workflows/setup_image_pull_secrets.yaml
+++ b/.github/workflows/setup_image_pull_secrets.yaml
@@ -16,7 +16,7 @@ jobs:
       # https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-secret-by-providing-credentials-on-the-command-line
       - name: Create image pull secret
         run: |
-          kubectl apply secret docker-registry docker-registry --docker-server=${{ secrets.DOCKER_REGISTRY_HOST }} --docker-username=${{ secrets.DOCKER_REGISTRY_USERNAME }} --docker-password=${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+          kubectl create secret docker-registry docker-registry --docker-server=${{ secrets.DOCKER_REGISTRY_HOST }} --docker-username=${{ secrets.DOCKER_REGISTRY_USERNAME }} --docker-password=${{ secrets.DOCKER_REGISTRY_PASSWORD }}
       # https://stackoverflow.com/questions/55223075/automatically-use-secret-when-pulling-from-private-registry
       - name: Configure default service account to use image pull secret
         run: |
