Fix wlosiara-client service name

--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -16,7 +16,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: wlosiara-client-server
+                name: wlosiara-client
                 port:
                   number: 80
     - host: api.wlosiara.pl
