--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -18,5 +18,5 @@ docker-registry:
       - hosts:
           - docker-registry.dev.wlosiara.pl
         secretName: wlosiara-pl-docker-registry-tls
-  # secrets:
-  #   htpasswd: # pass this manually
+  secrets:
+    htpasswd: null # pass this manually, using: htpasswd -nbB $DOCKER_REGISTRY_USERNAME $DOCKER_REGISTRY_PASSWORD | tr -d '\n'
