Update nginx config

--- a/setup/nginx/configs/wlosiara.pl.conf
+++ b/setup/nginx/configs/wlosiara.pl.conf
@@ -4,21 +4,61 @@
 
 
 
-upstream wlosiara-cluster {
-	server $WLOSIARA_PL_MINIKUBE_CLUSTER_IP; # minikube cluster's IP
+upstream wlosiara-pl-kubernetes-api {
+	server $WLOSIARA_PL_MINIKUBE_CLUSTER_IP:8443; # minikube cluster's IP
+}
+
+upstream wlosiara-pl {
+	server $WLOSIARA_PL_MINIKUBE_CLUSTER_IP:443; # minikube cluster's IP
 }
 
 
 server {
-	server_name wlosiara.pl api.wlosiara.pl;
+	server_name wlosiara.pl api.wlosiara.pl chartmuseum.dev.wlosiara.pl;
 	listen 443 ssl;
 	location / {
-		proxy_pass http://wlosiara-cluster;
-
+		proxy_pass https://wlosiara-pl;
+		proxy_ssl_verify off;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto https;
 	}
+	ssl_certificate /etc/letsencrypt/live/wlosiara.pl/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/wlosiara.pl/privkey.pem; # managed by Certbot
+}
 
-    ssl_certificate /etc/letsencrypt/live/wlosiara.pl/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/wlosiara.pl/privkey.pem; # managed by Certbot
+
+server {
+	server_name kubernetes.dev.wlosiara.pl;
+	listen 443 ssl;
+	location / {
+		proxy_pass https://wlosiara-pl-kubernetes-api;
+		proxy_ssl_verify off;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto https;
+		proxy_ssl_trusted_certificate /etc/nginx/wlosiara-pl-kubernetes.crt;
+	}
+	ssl_certificate /etc/letsencrypt/live/wlosiara.pl/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/wlosiara.pl/privkey.pem; # managed by Certbot
+}
+
+server {
+	server_name docker-registry.dev.wlosiara.pl;
+	listen 443 ssl;
+
+
+	client_max_body_size 780M;
+	location / {
+		proxy_pass https://wlosiara-pl;
+		proxy_ssl_verify off;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto https;
+	}
+	ssl_certificate /etc/letsencrypt/live/wlosiara.pl/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/wlosiara.pl/privkey.pem; # managed by Certbot
 }
